feature: swaggo gen command work correctly
